--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,5 +3,6 @@ steps:
   script: |
     docker build -t us-west2-docker.pkg.dev/$PROJECT_ID/custom-workstation-repo/workstation-image:tag1 .
   automapSubstitutions: true
+  env: 'DOCKER_BUILDKIT=1'
 images:
 - 'us-west2-docker.pkg.dev/$PROJECT_ID/custom-workstation-repo/workstation-image:tag1'
